src/test/pass/match/match_simple.lly
enum class Option[A] {
    Some(A),
    None
}

var v = Some(10)

match v: {
    case Some(s):
    case None:
        stderr.write("Failed!\n")
}
