src/test/fail/match/match_bad_decompose.lly
#[
SyntaxError: Expected '(', not :.
Where: File "match_bad_decompose.lly" at line 14
]#

enum class Option[A] {
    Some(A),
    None
}

var v = None

match v: {
    case Some:
    case None:
}
